test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/nested_annotations.sw
// TODO: Adjust this test once https://github.com/FuelLabs/sway/issues/6932 is implemented.
library;

pub fn fa() {
    /// This is an outer doc comment.
}

pub fn fb() {
    //! This is an inner doc comment.
}

pub fn fc() {
    #[allow(dead_code)]
}